Added instructions for uninstalling

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -2,3 +2,9 @@ Zum installieren der Haskell Plattform unter Debian führen Sie folgendes
 Kommando aus:
 
 > aptitude install haskell-platform
+
+Zum deinstallieren der Haskell Plattform unter Debian führen Sie wiederum
+
+> aptitude remove haskell-platform
+
+aus.
